[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Bar.gd" type="Script" id=1]

[node name="Bar" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = 114.0
margin_right = 385.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 0.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Rect" ]

[node name="Sum" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 205.0
margin_right = 217.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1

[node name="Sub" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 205.0
margin_right = 280.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Mult" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 308.0
margin_top = 204.0
margin_right = 348.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "*"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Div" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 373.0
margin_top = 204.0
margin_right = 413.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "/"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="Sum" to="." method="_on_Sum_pressed"]

[connection signal="pressed" from="Sub" to="." method="_on_Sub_pressed"]

[connection signal="pressed" from="Mult" to="." method="_on_Mult_pressed"]

[connection signal="pressed" from="Div" to="." method="_on_Div_pressed"]


